# PROTEI_TEST

./: .gitignore  CMakeLists.txt  README.md  client.cpp  myLib.h  server.cpp
libs/: circle_queue.hpp  client_server.h  client_server.hpp  client_server_old.h  client_server_old.hpp  message.h  message.hpp  message_processing.h  message_processing.hpp
source/: client.cpp  server.cpp
tests/: CMakeLists.txt  test.cpp
